styles/style.css
/*-------------------- General --------------------*/

@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');

:root {
    --pink: #FF00C7;
    --orange: #FF9900;
    --white: #fff;
    --danger-pink: #E54778;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-image: url(../assets/blue-background-2000.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-family: 'Quicksand', sans-serif;
    font-weight: 700;
    text-transform: uppercase;
    position: relative;
    overflow-x: hidden;
}

#game-zone {
    width: 100%;
    height: 100vh;
    /* max-width: 80vw;
    max-height: 70vh; */
    padding: 10%;
    display: flex;
    justify-content: center;
    align-items: center;
}

img {
    max-width: 100%;
    max-height: 100%;
}

aside {
    font-size: 1.5em;
    padding: .5em;
}

header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-transform: initial;
    padding: 1em;
    z-index: 20;
}

header img {
    width: 600px;
    animation: zoom-entrance 1.5s ease-out;
}

button, .btn {
    cursor: pointer;
}

#logo-white {
    position: absolute;
    left: 1em;
    bottom: 1em;
    width: 200px;
    opacity: .5;
}

/* Fonts */

h1 {
    font-family: "Lobster", cursive;
    color: var(--white);
    text-align: center;
    font-size: 3em;
    font-weight: 500;
}

/* Utils */

.double-shadow {
    box-shadow: -5px -5px 0px var(--orange), 5px 5px 0px var(--pink);
}


.sound-off.double-shadow {
    box-shadow: -5px -5px 0px #CCCBC9, 5px 5px 0px #878787;
}

.btn {
    font-family: 'Quicksand', sans-serif;
    background: var(--white);
    border-radius: 15px;
    padding: 13px 85px;
    font-size: 1em;
    border: none;
    text-transform: uppercase;
    font-weight: 700;
}

.dialog {
    width: 90%;
    max-width: 800px;
    max-height: 600px;
    margin: auto;
    border-radius: 30px;
    border: none;
    font-size: 1.5em;
}

.dialog::backdrop {
    background: rgba(87, 68, 87, 0.54);
    backdrop-filter: blur(4px);
}

.danger-pink {
    background-color: var(--danger-pink);
    border-color: var(--danger-pink);
}

.pink {
    background-color: var(--pink);
    border-color: var(--pink)
}

.hidden {
    visibility: hidden;
}

.d-none {
    display: none;
}

.shrink {
    animation: shrink .5s forwards
}

.blink {
    opacity: 80%;
}

:focus-visible {
    outline: none;
}

/*-------------------- Animations --------------------*/
@keyframes shrink {
    0% {
        transform: scale(1);
    }

    100% {
        transform: scale(0.90)
    }
}

@keyframes zoom-entrance {
    0% {
        transform: scale(0)
    }  

    60% {
        transform: scale(1.5)
    }
    70% {
        transform: scale(.9)
    }
    80% {
        transform: scale(1.05)
    }
    90% {
        transform: scale(0.95)
    }
    100% {
        transform: scale(1)
    }
}

@keyframes zoom-in {
    0% {
        transform: scale(0)
    }  
    100% {
        transform: scale(1)
    }
}

@keyframes pulse {
    0% {
        transform: scale(0.97);
        box-shadow: -5px -5px 0px var(--orange), 5px 5px 0px var(--pink), 0 0 0 0 rgba(0, 0, 0, 0.7);
    }

    50% {
        transform: scale(1);
        box-shadow: -5px -5px 0px var(--orange), 5px 5px 0px var(--pink), 0 0 20px 20px rgba(0, 0, 0, 0);
    }

    100% {
        transform: scale(0.97);
        box-shadow: -5px -5px 0px var(--orange), 5px 5px 0px var(--pink), 0 0 0 0 rgba(0, 0, 0, 0);
    }
}

@keyframes slide-in-left {
    0% {
        left: -100%;
    }

    60% {
        left: -5%;
        transform: rotate(5deg);
    }

    70% {
        transform: rotate(-5deg);
    }

    80% {
        transform: rotate(3deg);
    }

    90% {
        transform: rotate(-3deg);
    }
}

@keyframes slide-in-right {
    0% {
        right: -100%;
    }

    60% {
        right: -5%;
        transform: translateY(-50%) rotate(5deg) scaleX(-1);
    }

    70% {
        transform: translateY(-50%) rotate(-5deg) scaleX(-1);
    }

    80% {
        transform: translateY(-50%) rotate(3deg) scaleX(-1);
    }

    90% {
        transform: translateY(-50%) rotate(-3deg) scaleX(-1);
    }
}

@keyframes blocker-appear {
    0% {
        right: -100%;
    }

    60% {
        right: -5%;
        transform: rotate(5deg) scaleX(-1);
    }

    70% {
        transform: rotate(-5deg) scaleX(-1);
    }

    80% {
        transform: rotate(3deg) scaleX(-1);
    }

    90% {
        transform: rotate(-3deg) scaleX(-1);
    }
}

/*-------------------- Sound & music --------------------*/
#switches {
    position: absolute;
    right: 2em;
    bottom: 1.2em;
}

.switch {
    height: 50px;
    width: 50px;
    border: none;
    border-radius: 50%;
    margin-left: 1em;
    transition: .5s;
}

.switch img {
    height: 30px;
}

.switch:hover {
    transform: rotate(15deg) scale(.97)
}

/*-------------------- Start screen --------------------*/

#start-screen {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
}

#start-button,
#retry-btn,
#ready-button {
    font-size: 2.5em;
    z-index: 10
}

#start-button:not(:disabled),
#retry-btn:not(:disabled),
#ready-button:not(:disabled) {
    animation: pulse 2s infinite;
}



#start-button:not(:disabled):hover,
#retry-btn:not(:disabled):hover,
#ready-button:not(:disabled):hover {
    animation-play-state: paused;
    transition: .5s;
    background-color: white;
}

*:disabled {
    font-style: italic;
    opacity: 1;
}

#tooltip.hidden {
    opacity: 0;
}

#tooltip {
    width: 100%;
    color: white;
    opacity: 1;
    transition: .5s;
    margin: .5em auto;
    text-align: center;
}
/* ... */

